samples/_failures_safe/1761514201_a5c8a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfcda951.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cfcda951.c:155:9: error: expected declaration or statement at end of input
  155 |         }
      |         ^
./samples/SAFE/__tmp_cfcda951.c:155:9: error: expected declaration or statement at end of input
